[package]
name = "connect_to_postgres"
version = "0.1.0"
authors = ["Aleksandrov Vladimir <invis87@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
r2d2 = "0.8.4"
r2d2-diesel = "1.0.0"
diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
dotenv = "0.9.0"

slog = "^2"
slog-term = "^2"
slog-async = "^2"